bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:2: error: type mismatch;
 found   : Int(100)
 required: Boolean
  if (10<=n<=100) {
             ^